--- a/src/main/StyledElements.html
+++ b/src/main/StyledElements.html
@@ -17,13 +17,13 @@
     
     <p style = "font-size: 30px" >This text is big</p>
     
-    <!-- TODO: Make this text italic -->
+    <!-- TODO: Make this text italic and add an id called italic -->
     <p>Please make this text italic</p>
 
-    <!-- TODO: Make this text small -->
+    <!-- TODO: Make this text small and add an id called small -->
     <p>Please make this text small</p>
 
-    <!-- TODO: Center this text -->
+    <!-- TODO: Center this text and add an id called center -->
     <p>Research spike: put this text in the center of the screen (you'll have to look up how to do it)</p>
 
     <!-- OPTIONAL PRACTICE: If you want more practice later, try changing the color of some text; then try changing the color AND centering simultaneously.
